5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1573_1330.log
== TEST (2019-03-11 15:30:31) 
-- CODE:
print(250/6)
print("round(250, 6)")
-- OUTPUT:
41.666666666666664
round(250, 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:30:33) 
-- CODE:
print(250/6)
print("round(250, 6)")
-- EXECUTION TIME:
0.132397
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
round(250, 6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:34) 
-- CODE:
print(250/6)
print("round(250, 6)")
-- OUTPUT:
41.666666666666664
round(250, 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:30:36) 
-- CODE:
print(250/6)
print("round(250, 6)")
-- EXECUTION TIME:
0.123642
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
round(250, 6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:37) 
-- CODE:
print(250/6)
print("round(250, 6)")
-- OUTPUT:
41.666666666666664
round(250, 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:30:39) 
-- CODE:
print(250/6)
print("round(250, 6)")
-- EXECUTION TIME:
0.207875
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
round(250, 6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:30:48) 
-- CODE:

print("round(250, 6)")
-- OUTPUT:
round(250, 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:30:49) 
-- CODE:

print("round(250, 6)")
-- EXECUTION TIME:
0.192663
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
round(250, 6)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:45) 
-- CODE:
print(250/6)
print("round(250, 9)")
-- OUTPUT:
41.666666666666664
round(250, 9)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:32:46) 
-- CODE:
print(250/6)
print("round(250, 9)")
-- EXECUTION TIME:
0.132088
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
round(250, 9)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:32:47) 
-- CODE:
print(250/6)
print("round(250, 9)")
-- OUTPUT:
41.666666666666664
round(250, 9)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:33:46) 
-- CODE:
print(250/6)
print(round(250, 6))
-- OUTPUT:
41.666666666666664
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:47) 
-- CODE:
print(250/6)
print(round(250, 6))
-- EXECUTION TIME:
0.174401
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:08) 
-- CODE:

print(round(250, 6)
-- ERROR:
File "XXXX", line 3
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:09) 
-- CODE:

print(round(250, 6)
-- EXECUTION TIME:
0.139159
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 3
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:13) 
-- CODE:

print(round(250, 6)
-- ERROR:
File "XXXX", line 3
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:22) 
-- CODE:

print(round(250, 6))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:27) 
-- CODE:

print(round(250, 6))
-- EXECUTION TIME:
0.112512
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:19) 
-- CODE:

print(round(x, n))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(x, n))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:35:20) 
-- CODE:

print(round(x, n))
-- EXECUTION TIME:
0.150335
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(x, n))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:35:34) 
-- CODE:

print(round(250, 2))
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:35:35) 
-- CODE:

print(round(250, 2))
-- EXECUTION TIME:
0.127278
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
250
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:38:05) 
-- CODE:

print(round(250,0,2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(250,0,2 ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:06) 
-- CODE:

print(round(250,0,2 ))
-- EXECUTION TIME:
0.114144
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(250,0,2 ))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:07) 
-- CODE:

print(round(250,0,2 ))
-- EXECUTION TIME:
0.186192
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(250,0,2 ))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:21) 
-- CODE:

print(round(41,66, 2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:23) 
-- CODE:

print(round(41,66, 2 ))
-- EXECUTION TIME:
0.288427
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:27) 
-- CODE:

print(round(41,66 2 ))
-- ERROR:
File "XXXX", line 2
    print(round(41,66 2 ))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:28) 
-- CODE:

print(round(41,66 2 ))
-- EXECUTION TIME:
0.186107
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 2
    print(round(41,66 2 ))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:33) 
-- CODE:

print(round(41, 2 ))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:34) 
-- CODE:

print(round(41, 2 ))
-- EXECUTION TIME:
0.129051
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:35) 
-- CODE:

print(round(41, 2 ))
-- EXECUTION TIME:
0.116027
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:35) 
-- CODE:

print(round(41, 2 ))
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:08) 
-- CODE:

print(round(41,66, 2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:08) 
-- CODE:

print(round(41,66, 2 ))
-- EXECUTION TIME:
0.180818
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:17) 
-- CODE:

print(round(4166 2 ))
-- ERROR:
File "XXXX", line 2
    print(round(4166 2 ))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:18) 
-- CODE:

print(round(4166 2 ))
-- EXECUTION TIME:
0.118522
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 2
    print(round(4166 2 ))
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:37) 
-- CODE:

print(round(41,66, 2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:38) 
-- CODE:

print(round(41,66, 2 ))
-- EXECUTION TIME:
0.158981
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:39) 
-- CODE:

print(round(41,66, 2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:40) 
-- CODE:

print(round(41,66, 2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:40) 
-- CODE:

print(round(41,66, 2 ))
-- EXECUTION TIME:
0.231895
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:12) 
-- CODE:

print(round(41,66, 2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:41:13) 
-- CODE:

print(round(41,66, 2 ))
-- EXECUTION TIME:
0.173457
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:54) 
-- CODE:

print(round(41,66, 2 ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:45:55) 
-- CODE:

print(round(41,66, 2 ))
-- EXECUTION TIME:
0.123426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1330/main.py", line 2, in <module>
    print(round(41,66, 2 ))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:00) 
-- CODE:

print(round(41,66, 2 )
-- ERROR:
File "XXXX", line 3
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:46:00) 
-- CODE:

print(round(41,66, 2 )
-- EXECUTION TIME:
0.120095
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 3
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:46:02) 
-- CODE:

print(round(41,66, 2 )
-- EXECUTION TIME:
0.274395
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 3
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:02) 
-- CODE:

print(round(41,66, 2 )
-- ERROR:
File "XXXX", line 3
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:46:03) 
-- CODE:

print(round(41,66, 2 )
-- EXECUTION TIME:
0.138044
-- ERROR:
  File "/home/codebench/codes/1573/1330/main.py", line 3
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:50) 
-- CODE:

print(round(41.66, 2 ))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:46:51) 
-- CODE:

print(round(41.66, 2 ))
-- EXECUTION TIME:
0.116724
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:52) 
-- CODE:

print(round(41.66, 2 ))
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:46:54) 
-- CODE:

print(round(41.66, 2 ))
-- EXECUTION TIME:
0.186906
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:47:03) 
-- CODE:

print(round(41.666, 2 ))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:47:05) 
-- CODE:

print(round(41.666, 2 ))
-- EXECUTION TIME:
0.229821
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
